--- a/css/mobile.css
+++ b/css/mobile.css
@@ -15,6 +15,9 @@ body{
 	line-height: normal !important;
 	background-color: white !important;
 }
+.prism-player{
+	background-color: white !important;
+}
 /*pc端*/
 #mobile{
 	margin-top: 59px;
@@ -54,15 +57,15 @@ body{
 }
 /*人数统计*/
 #peoples{
-	margin-top: 0.824%;
-	margin-bottom: 4.6863%;
+	margin-top: 0.28rem;
+	margin-bottom: 0.95rem;
 	display: flex;
 	justify-content:center;
 }
 .pox{
 	display: inline-block;
-	width: 0.62rem;
-	height: 0.87rem;
+	width: 31px;
+	height: 44px;
 	text-align: center;
 	background-image: url('../images/mobile/2.png'); 
 	background-size: 100% 100%;
@@ -72,10 +75,10 @@ body{
 }
 .poxs{
 	position: relative;
-	margin-top: 0.13rem;
+	margin-top: 6px;
 	width: 100%;
-	height: 0.6rem;
-	line-height: 0.6rem;
+	height: 30px;
+	line-height: 30px;
 	text-align: center;
 	color: white;
 	font-weight: 600;
@@ -86,12 +89,12 @@ body{
 	position: absolute;
 	left: 0px;
 	top: 0px;
-	width: 0.61rem;
-	height: 6rem;
-	line-height: 0.6rem;
+	width: 30px;
+	height: 300px;
+	line-height: 30px;
 	color: white;
 	font-weight: 600;
-	font-size: 0.56rem;
+	font-size: 29px;
 	word-wrap:break-word; 
 	word-break:normal;
 }
@@ -99,7 +102,7 @@ body{
 	left: 18%;
 }
 #peoples .pox:first-child,#peoples .pox:last-child{
-	width: 0.71rem;
+	width: 35px;
 }
 #peoples .pox:first-child{
 	background-image: url('../images/mobile/1.png'); 
@@ -122,11 +125,11 @@ body{
 
 /*选择列表*/
 .itemList{
-	margin-top: 1.098%;
 	overflow: hidden;
 }
 #myTab{
 	margin: 0 auto;
+	padding:0.41rem 0rem;
 	width: 6.68rem;
 	display: flex;
 }
@@ -151,23 +154,72 @@ body{
 .nav-tabs>li>a:hover{
 	background-color: white !important;
 }
+
+.choosewhich{
+	width: 100%;
+	height: 1.36rem;
+	line-height: 1.36rem;
+	padding-left: 0.87rem;
+	padding-right: 0.42rem;
+	background-color: rgb(239,239,239);
+	font-size: 0.3rem;
+	color: rgb(80,80,80);
+	overflow: hidden;
+	border-top: 1px solid rgb(227,227,229);
+	border-bottom: 1px solid rgb(227,227,229);
+}
+.chooseicon{
+	float: right;
+	margin-top: 0.35rem;
+	font-weight: 600;
+	color: black;
+	font-size: 0.46rem;
+	line-height: normal;
+}
 .smallitem{
-	margin-top: 2.5%;
+	display: none;
 	width: 100%;
 }
 .smallitem li{
-	float: left;
-	margin: 0.5% 1.2%;
-	padding: 2px 1.6%;
-	font-size: 22px;
-	color: #c1c1c1;
-	cursor: pointer;
+	width: 100%;
+	height: 0.75rem;
+	line-height: 0.75rem;
+	padding-left: 0.87rem;
+	padding-right: 0.42rem;
+	background-color: rgb(239,239,239);
+	font-size: 0.3rem;
+}
+.smallitem li:hover{
+	background-color: rgb(230,0,18);
+	color: white;
 }
 .itemactive{
-	background-color: #f50000;
-	color: white !important;
-	border-radius: 26px;
+	display: none;
 }
+
+
+
+.detailpic{
+	width: 100%;
+	padding-top: 0.2rem;
+	padding-bottom: 0.17rem;
+}
+.detailpic img{
+	display: block;
+	margin: 0 auto;
+	margin-bottom: 0.38rem;
+	width: 7.11rem;
+	height: 4.13rem;
+}
+.detailpic p{
+	margin: 0 auto;
+	margin-bottom: 0rem;
+	width: 7.11rem;
+	color: #505050;
+	font-size: 0.3rem;
+}
+
+
 
 
 
@@ -177,7 +229,7 @@ body{
 	margin: 0 auto;
 	margin-top: 0.37rem;
 	width: 6.67rem;
-	border: 1px solid #f50000;
+	/*border: 1px solid #f50000;*/
 }
 .classList tr{
 	height: 0.35rem;
@@ -188,7 +240,7 @@ body{
 	font-size:0.15rem;
 	text-align: center;
 }
-.classList td{
+.classList td,.classList th{
 	border:1px solid #fdc2c2;
 	text-align: center;
 	color: #252525;
