修改为以STS方式播放视频

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -33,6 +33,9 @@ body{
 	display: none;
 	overflow: hidden;
 }
+.prism-player .prism-ErrorMessage .prism-error-content{
+	margin-top: 60% !important;
+}
 #fadebgclose{
 	position: absolute;
 	right: 0px;
@@ -43,6 +46,7 @@ body{
 	text-align: center;
 	font-size: 0.4rem;
 	color: white;
+	z-index:999;
 }
 .prism-player .prism-big-play-btn{
 	margin:auto;
